--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@noble/ed25519": "^2.3.0",
+    "@noble/hashes": "^1.8.0",
+    "@scure/base": "^1.2.6",
     "axios": "^1.6.7",
     "bech32": "^2.0.0",
+    "bip39": "^3.1.0",
     "pinia": "^2.1.7",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "tweetnacl": "^1.0.3",
+    "vite-plugin-node-polyfills": "^0.23.0",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
